welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:39: error: value Blue is not a member of object java.awt.Color
  faireQuart1(Color.Blue)
                    ^PatternPicture:42: error: value Red is not a member of object java.awt.Color
  faireQuart2(Color.Red)
                    ^